[gd_scene load_steps=2 format=3 uid="uid://pmusx8gbvw5n"]

[ext_resource type="Script" path="res://auth_pages/authentication.gd" id="1_kr15o"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kr15o")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -456.0
offset_top = -316.0
offset_right = 456.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 136
text = "Kiki's Delivery"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.0
offset_top = 247.0
offset_right = -40.0
offset_bottom = 306.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "No account?"
horizontal_alignment = 2

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -437.0
offset_top = 307.0
offset_right = -40.0
offset_bottom = 366.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Forgot password?"
horizontal_alignment = 2

[node name="StateLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = -117.0
offset_right = 337.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Not Signed in"
horizontal_alignment = 1

[node name="EmailLineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.5
offset_top = -45.0
offset_right = 408.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "Email"
alignment = 1

[node name="PasswordLineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.5
offset_top = 39.0
offset_right = 408.5
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "Password"
alignment = 1

[node name="LoginButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = 124.0
offset_right = 166.0
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Login"

[node name="SignUpButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 250.0
offset_right = 328.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Sign Up"

[node name="ResetPasswordButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 311.0
offset_right = 328.0
offset_bottom = 361.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Reset Password"

[node name="WebTestButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1289.0
offset_top = 94.0
offset_right = 1676.0
offset_bottom = 206.0
text = "Open Client Controller App"

[connection signal="pressed" from="LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="SignUpButton" to="." method="_on_sign_up_button_pressed"]
[connection signal="pressed" from="ResetPasswordButton" to="." method="_on_reset_password_button_pressed"]
[connection signal="pressed" from="WebTestButton" to="." method="_on_web_test_button_pressed"]
